kotlin-spring-boot-base/src/main/resources/archetype-resources/kubernetes/__artifactId__-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: __APP-NAME__-service
  namespace: __NAMESPACE__
spec:
  selector:
    app: __APP-NAME__
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
